refactor: add spotbug, adjust checkstyle